fix(test): fix CarrierMovementRepositoryTest on WildFly